[gd_scene load_steps=5 format=2]

[ext_resource path="res://theme.tres" type="Theme" id=1]
[ext_resource path="res://ui/ActionSelector/ButtonCategoryContainer.gd" type="Script" id=2]
[ext_resource path="res://button_container_theme.tres" type="Theme" id=3]
[ext_resource path="res://ui/ActionSelector/too_many_moves.png" type="Texture" id=4]

[node name="Control" type="Control"]
show_behind_parent = true
margin_right = 55.0
margin_bottom = 1000.0
rect_min_size = Vector2( 55, 60 )
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 1 )
theme_type_variation = "InvisScrollbar"
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
unique_name_in_owner = true
margin_right = 56.0
margin_bottom = 77.0
rect_min_size = Vector2( 55, 77 )
custom_constants/separation = -10

[node name="CenterContainer" type="Control" parent="VBoxContainer"]
margin_right = 56.0
margin_bottom = 12.0
rect_min_size = Vector2( 0, 12 )

[node name="Label" type="Label" parent="VBoxContainer/CenterContainer"]
unique_name_in_owner = true
anchor_left = 0.5
anchor_right = 0.5
margin_left = -22.5
margin_right = 22.5
margin_bottom = 11.0
grow_horizontal = 2
grow_vertical = 2
text = "Category"
align = 1

[node name="PredictButton" type="Button" parent="VBoxContainer/CenterContainer"]
unique_name_in_owner = true
visible = false
show_behind_parent = true
margin_right = 55.0
margin_bottom = 12.0
mouse_filter = 1
mouse_default_cursor_shape = 2
theme_type_variation = "PredictButton"
toggle_mode = true
pressed = true
action_mode = 0

[node name="PredictLabel" type="Label" parent="VBoxContainer/CenterContainer/PredictButton"]
unique_name_in_owner = true
visible = false
margin_left = 11.0
margin_top = -12.0
margin_right = 46.0
margin_bottom = -1.0
grow_horizontal = 2
text = "Predict"

[node name="GuardBreakLabel" type="Label" parent="VBoxContainer/CenterContainer"]
unique_name_in_owner = true
visible = false
modulate = Color( 1, 1, 1, 0.509804 )
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -30.0
margin_top = -29.0
margin_right = 30.0
margin_bottom = -18.0
custom_colors/font_color = Color( 1, 0.486275, 0.121569, 1 )
text = "Guard Break"
align = 1

[node name="InitiativeLabel" type="Label" parent="VBoxContainer/CenterContainer"]
unique_name_in_owner = true
visible = false
modulate = Color( 1, 1, 1, 0.509804 )
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -30.0
margin_top = -29.0
margin_right = 30.0
margin_bottom = -18.0
custom_colors/font_color = Color( 0.392157, 0.823529, 0.419608, 1 )
text = "Initiative"
align = 1

[node name="FrameLabel" type="Label" parent="VBoxContainer/CenterContainer"]
unique_name_in_owner = true
modulate = Color( 1, 1, 1, 0.509804 )
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -20.0
margin_top = -21.0
margin_right = 20.0
margin_bottom = -10.0
align = 1

[node name="ButtonCategoryContainer" type="PanelContainer" parent="VBoxContainer"]
self_modulate = Color( 1, 1, 1, 0 )
margin_top = 2.0
margin_right = 56.0
margin_bottom = 67.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ButtonCategoryContainer"]
margin_left = 1.0
margin_top = 1.0
margin_right = 55.0
margin_bottom = 64.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Panel" type="PanelContainer" parent="VBoxContainer/ButtonCategoryContainer/VBoxContainer"]
self_modulate = Color( 1, 1, 1, 0 )
margin_right = 54.0
margin_bottom = 10.0
rect_min_size = Vector2( 0, 10 )
mouse_filter = 2
size_flags_horizontal = 3

[node name="ScrollContainer" type="Control" parent="VBoxContainer/ButtonCategoryContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 11.0
margin_right = 54.0
margin_bottom = 63.0
rect_min_size = Vector2( 54, 52 )
theme = ExtResource( 3 )
theme_type_variation = "InvisScrollbar"

[node name="ButtonContainer" type="GridContainer" parent="VBoxContainer/ButtonCategoryContainer/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -52.0
margin_right = 54.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 3 )
custom_constants/vseparation = 1
custom_constants/hseparation = 1
columns = 3

[node name="ScrollContainer2" type="ScrollContainer" parent="VBoxContainer/ButtonCategoryContainer/VBoxContainer"]
visible = false
margin_top = 64.0
margin_right = 54.0
margin_bottom = 64.0
rect_min_size = Vector2( 48, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
follow_focus = true
scroll_horizontal_enabled = false

[node name="Panel2" type="Panel" parent="VBoxContainer/ButtonCategoryContainer/VBoxContainer/ScrollContainer2"]
self_modulate = Color( 1, 1, 1, 0 )
margin_right = 54.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ActionDataPanelContainer" type="PanelContainer" parent="."]
unique_name_in_owner = true
self_modulate = Color( 1, 1, 1, 0 )
show_behind_parent = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -5.0
margin_top = -5.0
margin_right = 5.0
margin_bottom = 5.0
mouse_filter = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="ActionDataContainer" type="VBoxContainer" parent="ActionDataPanelContainer"]
unique_name_in_owner = true
margin_left = 1.0
margin_top = 1.0
margin_right = 9.0
margin_bottom = 9.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 1 )

[node name="UpdateTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="TooManyMoves" type="TextureRect" parent="."]
unique_name_in_owner = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.0
margin_top = 9.0
margin_right = -1.0
margin_bottom = -939.0
mouse_filter = 2
texture = ExtResource( 4 )
stretch_mode = 4

[node name="CycleTimer" type="Timer" parent="."]
autostart = true

[connection signal="mouse_entered" from="VBoxContainer/CenterContainer/PredictButton" to="." method="_on_PredictButton_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/CenterContainer/PredictButton" to="." method="_on_PredictButton_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/CenterContainer/PredictButton" to="." method="_on_PredictButton_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/ButtonCategoryContainer/VBoxContainer/ScrollContainer/ButtonContainer" to="." method="_on_ButtonContainer_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/ButtonCategoryContainer/VBoxContainer/ScrollContainer/ButtonContainer" to="." method="_on_ButtonContainer_mouse_exited"]
[connection signal="timeout" from="UpdateTimer" to="." method="_on_UpdateTimer_timeout"]
[connection signal="timeout" from="CycleTimer" to="." method="_on_CycleTimer_timeout"]
